src/snapshot_middleware/snapshots/test__module_from_imfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  contributing_paths:
    - /foo.lua
  project_node: ~
name: foo
class_name: ModuleScript
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
