src/snapshot_middleware/snapshots/test__module_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.lua
  relevant_paths:
    - /foo.lua
    - /foo.meta.json
  context:
    ignore_paths: []
name: foo
class_name: ModuleScript
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
