src/snapshot_middleware/snapshots/test__module_with_meta.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.lua
  relevant_paths:
    - /foo.lua
name: foo
class_name: ModuleScript
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
