src/snapshot_middleware/snapshots/test__project_from_direct_file.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/hello.project.json
  relevant_paths:
    - /foo/hello.project.json
name: direct-project
class_name: Model
properties: {}
children: []
