src/snapshot_middleware/snapshots/test__project_from_folder.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  relevant_paths:
    - /foo/default.project.json
name: indirect-project
class_name: Folder
properties: {}
children: []