src/snapshot_middleware/snapshots/test__project_path_property_overrides.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  contributing_paths:
    - /foo/default.project.json
    - /foo/other.project.json
  project_node: ~
name: path-property-override
class_name: StringValue
properties:
  Value:
    Type: String
    Value: Changed
children: []
