src/snapshot_middleware/snapshots/test__project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/default.project.json
  context:
    path_ignore_glob: []
name: children
class_name: Folder
properties: {}
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        ProjectNode:
          - Child
          - class_name: Model
            children: {}
            properties: {}
            ignore_unknown_instances: ~
            path: ~
      relevant_paths: []
      context:
        path_ignore_glob: []
    name: Child
    class_name: Model
    properties: {}
    children: []
