src/snapshot_middleware/snapshots/test__project_with_path_to_project.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  relevant_paths:
    - /foo/other.project.json
    - /foo/default.project.json
name: path-project
class_name: Model
properties: {}
children: []