src/snapshot_middleware/snapshots/test__project_with_path_to_project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/other.project.json
    - /foo/default.project.json
  context: {}
name: path-child-project
class_name: Folder
properties: {}
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        ProjectNode:
          - SomeChild
          - class_name: Model
            children: {}
            properties: {}
            ignore_unknown_instances: ~
            path: ~
      relevant_paths: []
      context: {}
    name: SomeChild
    class_name: Model
    properties: {}
    children: []
