src/snapshot_middleware/snapshots/test__project_with_path_to_txt.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  relevant_paths:
    - /foo/other.txt
    - /foo/default.project.json
name: path-project
class_name: StringValue
properties:
  Value:
    Type: String
    Value: "Hello, world!"
children: []