src/snapshot_middleware/snapshots/test__project_with_resolved_properties.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  relevant_paths:
    - /foo/default.project.json
name: resolved-properties
class_name: StringValue
properties:
  Value:
    Type: String
    Value: "Hello, world!"
children: []