src/snapshot_middleware/snapshots/test__project_with_unresolved_properties.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  contributing_paths:
    - /foo/default.project.json
name: unresolved-properties
class_name: StringValue
properties:
  Value:
    Type: String
    Value: Hi!
children: []
